--- a/index.html
+++ b/index.html
@@ -2,22 +2,18 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
-	<title>Otito</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<title>òtító | a platform for documenting and sharing truth</title>
 	<link href="/public/styles/bundled.css" rel="stylesheet" />
-	<link href="/public/styles/mobile.css" rel="stylesheet" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="/public/third-party-packages/fontawesome/css/all.css">
-
+	<meta
+		name="description"
+		content="Society's most democratic tool for documenting and sharing objectively verifiable political and socio-cultural truth."
+	/>
 </head>
 <body>
   	<div id="app" class=""></div>
-
-
-
-
-	
-
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
